Small bug fix to new Superfish CSS file to put in z-index values in order to make the menus appear in front of new dashboard tabs in Internet Explorer on admin/index.php page.

--- a/2.1/catalog/admin/includes/javascript/superfish.css
+++ b/2.1/catalog/admin/includes/javascript/superfish.css
@@ -30,7 +30,7 @@
 .sf-menu li:hover ul,
 .sf-menu li.sfHover ul {
 	left:			0;
-	top:			2.4em; /* match top ul list item height */
+	top:			2.5em; /* match top ul list item height */
 	z-index:		99;
 }
 ul.sf-menu li:hover li ul,
@@ -68,18 +68,22 @@ ul.sf-menu li li li.sfHover ul {
 }
 .sf-menu li {
 	background:		#606060;
+	z-index:		9999; /*pgm fix for jQuery UI tabs*/
 }
 .sf-menu li li {
 	background:		#606060;
+	z-index:		9999; /*pgm fix for jQuery UI tabs*/
 }
 .sf-menu li li li {
 	background:		#606060;
+	z-index:		9999; /*pgm fix for jQuery UI tabs*/
 }
 .sf-menu li:hover, .sf-menu li.sfHover,
 .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active {
 	background:		#C9C9C9;
 	outline:		0;
 	color:			#000000;
+	z-index:		9999; /*pgm fix for jQuery UI tabs*/
 }
 
 /*** arrows **/
